--- a/src/index.css
+++ b/src/index.css
@@ -52,7 +52,7 @@ h2 {
   font-family: var(--page-font);
   color: var(--color-primary);
   font-size: large;
-  transition: border-width 0.1s linear;
+  transition: box-shadow 2s;
 }
 
 .todo-input:focus {
@@ -62,16 +62,47 @@ h2 {
 }
 
 .button {
-  /* border-color: white; */
   border-radius: 40px;
   padding-left: 10px;
   width: 65px;
   font-family: var(--page-font);
-  background-color: #3b8fb7;
-  color: #ffffff;
+  background-color: var(--color-primary);
+  color: white;
   font-size: medium;
   font-style: bold;
   cursor: pointer;
+  transition: box-shadow, 0.2s;
+}
+
+.button:hover:enabled {
+  border: 2px solid #56b7e1;
+  background-color: #1b6b90;
+  box-shadow: 0px 0px 5px #1b6b90;
+}
+
+.button:disabled,
+.button[disabled] {
+  border: 1px solid #999999;
+  background-color: #cccccc;
+  color: #666666;
+}
+
+.del-btn {
+  transition: box-shadow, 0.2s;
+  color: white;
+  font-family: var(--page-font);
+  background-color: #d92424fa;
+  border-color: #d92424fa;
+  padding: 3px;
+  width: 45px;
+  height: 45px;
+  border-radius: 100%;
+}
+
+.del-btn:hover {
+  border: 2px solid #950c0c;
+  background-color: #b50404;
+  box-shadow: 0px 0px 8px #b50404;
 }
 
 .flex-box {
@@ -95,4 +126,12 @@ h2 {
 
 .modal-item {
   width: 35vw;
+  /* box-shadow: 0px 0px 5px #56b7e1; */
+}
+
+.todo-text {
+  cursor: pointer;
+  user-select: none;
+  text-decoration: none;
+  transition: text-decoration 0.8s ease-in;
 }
