--- a/src/index.css
+++ b/src/index.css
@@ -13,6 +13,7 @@ html {
   background-color: #3b8fb7;
   display: flex;
   width: 100vw;
+  box-shadow: 0 0 15px var(--color-primary);
 }
 
 .navbar h1 {
